--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <div class="paper image">
   <p> and I fallen in</p>
     <p>Love with You 😍 </p>
-   <img src="C:\Users\user\Desktop\web_project\funny\Screenshot 2023-12-23 220700.png"/>
+   <img src="https://github.com/mvpandit7292/impress_gf-github.io/blob/main/Screenshot%202023-12-23%20220700.png?raw=true/>
 </div>
 
 <div class="paper image">
  
-  <img src="C:\Users\user\Desktop\web_project\funny\Screenshot 2023-12-23 220700.png" />
+  <img src="https://github.com/mvpandit7292/impress_gf-github.io/blob/main/Screenshot%202023-12-23%20220700.png?raw=true/>
 </div>
 
 <div class="paper image">
   <p>How can be </p>
    <p> someone so cute ❤️ </p>
 
-  <img src="C:\Users\user\Desktop\web_project\funny\Screenshot 2023-12-23 220700.png" />
+  <img src="https://github.com/mvpandit7292/impress_gf-github.io/blob/main/Screenshot%202023-12-23%20220700.png?raw=true/>
 </div>
 
 
